--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ variables:
     TUTOR_PLUGIN: indigo
     TUTOR_PYPI_PACKAGE: tutor-indigo
     TUTOR_BUILD_IMAGE: openedx
-    OPENEDX_RELEASE: nutmeg
+    OPENEDX_RELEASE: olive
     GITHUB_REPO: overhangio/tutor-indigo
 
 include:
